<resources>
    <string name="app_name">XHAW 5112 FINAL</string>
    <string name="click_here">Click Here</string>
    <string name="click_here2">Click Here</string>
    <string name="click_here3">Click Here</string>
    <string name="click_here4">Click Here</string>
    <string name="home">Home</string>
    <string name="_6_month_courses">6 Month Courses</string>
    <string name="_6_week_courses">6 Week Courses</string>
    <string name="contact_us">Contact Us</string>
    <string name="fees">Fees</string>
    <string name="_6_week_courses2">6 Week Courses</string>
    <string name="child_minding">Child Minding</string>
    <string name="cooking">Cooking</string>
    <string name="click_here5">Click Here</string>
    <string name="click_here6">Click Here</string>
    <string name="click_here7">Click Here</string>
    <string name="garden_makntenance">Garden Makntenance</string>
    <string name="child_minding3">Child Minding</string>
    <string name="garden_maintenance3">Garden Maintenance</string>
    <string name="fees_r750">Fees:R750</string>
    <string name="purpose_to_provide_basic_knowledge_of_watering_pruning_and_planting_in_a_domestic_garden">Purpose: To provide basic knowledge of watering, pruning and planting in a domestic garden.</string>
    <string name="content">Content:</string>
    <string name="water_restrictions_and_the_watering_requirements_of_indigenous_and_exotic_plants">Water restrictions and the watering requirements of indigenous and exotic plants</string>
    <string name="pruning_and_propagation_of_plants">Pruning and propagation of plants</string>
    <string name="planting_techniques_for_different_plant_types">Planting techniques for different plant types</string>
    <string name="garden_maintenance">Garden Maintenance</string>
    <string name="cooking2">Cooking</string>
    <string name="fees_r7502">Fees: R750</string>
    <string name="purpose_to_prepare_and_cook_nutritious_family_meals">Purpose: To prepare and cook nutritious family meals</string>
    <string name="content2">Content:</string>
    <string name="nutritional_requirements_for_a_healthy_body">Nutritional requirements for a healthy body</string>
    <string name="types_of_protein_carbohydrates_and_vegetables">Types of protein, carbohydrates and vegetables</string>
    <string name="planning_meals">Planning meals</string>
    <string name="preparation_and_cooking_of_meals">Preparation and cooking of meals</string>
    <string name="child_minding2">Child Minding</string>
    <string name="click_here8">Click Here</string>
    <string name="click_here9">Click Here</string>
    <string name="_6_month_courses2">6 Month Courses</string>
    <string name="first_aid3">First Aid</string>
    <string name="click_here10">Click Here</string>
    <string name="sewing">Sewing</string>
    <string name="life_skills">Life Skills</string>
    <string name="landscaping">Landscaping</string>
    <string name="click_here11">Click Here</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="child_minding5">Child Minding</string>
    <string name="fees_r1500">Fees: R1500</string>
    <string name="purpose_to_provide_basic_child_and_baby_care">Purpose: To provide basic child and baby care</string>
    <string name="content4">Content:</string>
    <string name="birth_to_six_month_old_baby_needs">birth to six-month old baby needs</string>
    <string name="seven_month_to_one_year_old_needs">seven-month to one year old needs</string>
    <string name="toddler_needs">Toddler needs</string>
    <string name="educational_toys">Educational toys</string>
    <string name="click_here12">Click Here</string>
    <string name="cooking3">Cooking</string>
    <string name="garden_maintenance2">Garden Maintenance</string>
    <string name="menu">Menu</string>
    <string name="click_here1">Click Here</string>
    <string name="cooking4">Cooking</string>
    <string name="click_here13">Click Here</string>
    <string name="menu3">Menu</string>
    <string name="menu5">Menu</string>
    <string name="click_here14">Click Here</string>
    <string name="click_here15">Click Here</string>
    <string name="first_aid">First Aid</string>
    <string name="menu2">MENU</string>
    <string name="emergency_scene_management">Emergency scene management</string>
    <string name="burns_and_fractures">Burns and fractures</string>
    <string name="wounds_and_bleeding">Wounds and bleeding</string>
    <string name="content3">Content:</string>
    <string name="purpose_to_provide_first_aid_awareness_and_basic_life_suppor">Purpose: To provide first aid awareness and basic life suppor</string>
    <string name="fees_r15003">Fees:R1500</string>
    <string name="sewing2">Sewing</string>
    <string name="landscaping2">Landscaping</string>
    <string name="click_here16">Click Here</string>
    <string name="click_here17">Click Here</string>
    <string name="life_skills2">Life Skills</string>
    <string name="click_here18">Click Here</string>
    <string name="menu4">Menu</string>
    <string name="lifeskills">LifeSkills</string>
    <string name="fees_r15002">Fees:R1500</string>
    <string name="purpose_to_provide_skills_to_navigate_basic_life_necessities">Purpose: To provide skills to navigate basic life necessities</string>
    <string name="content17">Content</string>
    <string name="opening_a_bank_account">Opening a bank account</string>
    <string name="basic_labour_law_know_your_rights">Basic labour law (know your rights)</string>
    <string name="basic_reading_and_writing_literacy">Basic reading and writing literacy</string>
    <string name="basic_numeric_literacy">Basic numeric literacy</string>
    <string name="first_aid4">First Aid</string>
    <string name="sewing3">Sewing</string>
    <string name="landscaping3">Landscaping</string>
    <string name="click_here20">Click Here</string>
    <string name="click_here21">Click Here</string>
    <string name="click_here19">Click Here</string>
    <string name="menu6">Menu</string>
    <string name="contact_us2">Contact Us</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="first_aid_r1500">First Aid - R1500</string>
    <string name="sewing_r1500">Sewing - R1500</string>
    <string name="life_skills_r1500">Life Skills - R1500</string>
    <string name="landscaping_r1500">Landscaping - R1500</string>
    <string name="child_minding_r750">Child Minding - R750</string>
    <string name="garden_maintenance_r750">Garden Maintenance - R750</string>
    <string name="cooking_r750">Cooking - R750</string>
    <string name="button">Button</string>
    <string name="total">Total</string>
    <string name="total2">Total</string>
    <string name="menu8">MENU</string>
    <string name="landscaping9">Landscaping</string>
    <string name="fees_r15009">Fees: R1500</string>
    <string name="purpose_to_provide_landscaping_services_for_new_and_established_gardens">Purpose: To provide landscaping services for new and established gardens</string>
    <string name="content9">Content</string>
    <string name="indigenous_and_exotic_plants_and_trees">Indigenous and exotic plants and trees</string>
    <string name="fixed_structures_fountains_statues_benches_tables_built_in_braai">Fixed structures (fountains, statues, benches, tables, built-in braai)</string>
    <string name="balancing_of_plant_and_trees_in_a_garden">Balancing of plant and trees in a garden</string>
    <string name="aesthetics_of_plant_shapes_and_colour">Aesthetics of plant shapes and colour</string>
    <string name="first_aid9">First Aid</string>
    <string name="sewing7">Sewing</string>
    <string name="click_here22">Click Here</string>
    <string name="life_skills9">Life Skills</string>
    <string name="click_here36">Click Here</string>
    <string name="click_here44">Click Here</string>
</resources>