<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstAid">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="156dp"
        android:layout_height="144dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="123dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_2023_09_26_18_43_59" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="180dp"
        android:text="@string/first_aid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="310dp"
        android:text="@string/fees_r15003"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown7" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:text="@string/purpose_to_provide_first_aid_awareness_and_basic_life_suppor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="329dp"
        android:text="@string/content3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="222dp"
        android:text="@string/wounds_and_bleeding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="233dp"
        android:text="@string/burns_and_fractures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="163dp"
        android:text="@string/emergency_scene_management"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <Button
        android:id="@+id/dropdown7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="67dp"
        android:text="@string/menu2"
        app:layout_constraintEnd_toStartOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="129dp"
        android:text="@string/sewing2"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/button19"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="86dp"
        android:text="@string/click_here17"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="86dp"
        android:text="@string/landscaping2"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <Button
        android:id="@+id/button20"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="78dp"
        android:text="@string/click_here16"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="76dp"
        android:text="@string/life_skills2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <Button
        android:id="@+id/button21"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="64dp"
        android:text="@string/click_here18"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20" />
</androidx.constraintlayout.widget.ConstraintLayout>